stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_submit__submit_help.snap
---
source: crates/stepflow-main/tests/commands/test_submit.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - submit
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Submit a workflow to a StepFlow service.

Submit a workflow to a running StepFlow service.

# Examples

```bash

# Submit to local server

stepflow submit --flow=workflow.yaml --input=input.json

# Submit to remote server

stepflow submit --url=http://production-server:7837 --flow=workflow.yaml --input-json='{"key": "value"}'

# Submit with inline YAML input

stepflow submit --flow=workflow.yaml --input-yaml='param: value'

```

Usage: stepflow submit [OPTIONS] --flow <FILE>

Options:
      --log-level <LEVEL>
          Set the log level for StepFlow
          
          [default: info]
          [possible values: trace, debug, info, warn, error]

      --url <URL>
          The URL of the StepFlow service to submit the workflow to
          
          [default: http://localhost:7837]

      --flow <FILE>
          Path to the workflow file to submit

      --other-log-level <LEVEL>
          Set the log level for other parts of StepFlow
          
          [default: warn]
          [possible values: trace, debug, info, warn, error]

      --input <FILE>
          The path to the input file to execute the workflow with.
          
          Should be JSON or YAML. Format is inferred from file extension.

      --log-file <FILE>
          Write logs to a file instead of stderr

      --input-json <JSON>
          The input value as a JSON string

      --omit-stack-trace
          Omit stack traces (line numbers of errors)

      --input-yaml <YAML>
          The input value as a YAML string

      --stdin-format <FORMAT>
          The format for stdin input (json or yaml).
          
          Only used when reading from stdin (no other input options specified).
          
          [default: json]
          [possible values: json, yaml]

      --output <FILE>
          Path to write the output to.
          
          If not set, will write to stdout.

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
