stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_submit__submit_with_file_input.snap
---
source: crates/stepflow-main/tests/commands/test_submit.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - submit
    - "--url=http://localhost:9999"
    - "--flow=tests/mock/basic.yaml"
    - "--input=examples/eval/input.json"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Missing file: tests/mock/basic.yaml
